--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 FACEBOOK_KEY=813714388769155
 FACEBOOK_SECRET=5297d9d4c59b2122407c903e98d9154e
+REDIS_URL=redis://redistogo:96ee26edb64f5c0234482b73d636ce92@koi.redistogo.com:10219/
